<resources>
    <string name="app_name">MyCalc</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_div">/</string>
    <string name="btn_mutlt">X</string>
    <string name="btn_moins">-</string>
    <string name="btn_result">=</string>
    <string name="btn_add">+</string>
    <string name="resetAll">C</string>
    <string name="resetCurrentNumber">CE</string>
    <string name="delete">SUPP</string>
    <string name="comma">,</string>
</resources>
