<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/affichage"
        android:layout_width="376dp"
        android:layout_height="21dp"
        android:text="@string/btn_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="357dp"
        android:layout_height="237dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/affichage">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/resetCurrentNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onResetCurrentNumber"
                android:text="@string/resetCurrentNumber" />

            <Button
                android:id="@+id/resetAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onResetAll"
                android:text="@string/resetAll" />

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onDeleteOp"
                android:text="@string/delete" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperateur"
                android:tag="/"
                android:text="@string/btn_div" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumber"
                android:tag="7"
                android:text="@string/btn_7" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumber"
                android:tag="8"
                android:text="@string/btn_8" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumber"
                android:tag="9"
                android:text="@string/btn_9" />

            <Button
                android:id="@+id/btnMult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperateur"
                android:tag="*"
                android:text="@string/btn_mutlt" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumber"
                android:tag="4"
                android:text="@string/btn_4" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumber"
                android:tag="5"
                android:text="@string/btn_5" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumber"
                android:tag="6"
                android:text="@string/btn_6" />

            <Button
                android:id="@+id/btnMoins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperateur"
                android:tag="-"
                android:text="@string/btn_moins" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumber"
                android:tag="1"
                android:text="@string/btn_1" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumber"
                android:tag="2"
                android:text="@string/btn_2" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumber"
                android:tag="3"
                android:text="@string/btn_3" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="onOperateur"
                android:tag="+"
                android:text="@string/btn_add" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button39"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onAddSigned"
                android:text="+/-" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumber"
                android:tag="0"
                android:text="@string/btn_0" />

            <Button
                android:id="@+id/comma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comma" />


            <Button
                android:id="@+id/btnResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onResult"
                android:text="@string/btn_result" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/Operation"
        android:layout_width="374dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/affichage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>